--- a/filesys/miniFilter/nullFilter/nullFilter.vcxproj.Filters
+++ b/filesys/miniFilter/nullFilter/nullFilter.vcxproj.Filters
@@ -28,4 +28,13 @@
       <Filter>Resource Files</Filter>
     </ResourceCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Inf Include="*.inf">
+      <Filter>Driver Files</Filter>
+    </Inf>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="README.md" />
+    <None Include="README_CN.md" />
+  </ItemGroup>
 </Project>
