--- a/filesys/miniFilter/avscan/user/avscan.vcxproj.Filters
+++ b/filesys/miniFilter/avscan/user/avscan.vcxproj.Filters
@@ -30,4 +30,14 @@
       <Filter>Resource Files</Filter>
     </ResourceCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="userscan.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="utility.h" />
+    <ClInclude Include="userscan.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="utility.h" />
+  </ItemGroup>
 </Project>
