--- a/filesys/miniFilter/scanner/user/scanuser.vcxproj
+++ b/filesys/miniFilter/scanner/user/scanuser.vcxproj
@@ -186,6 +186,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Exclude="@(ClInclude)" Include="*.h;*.hpp;*.hxx;*.hm;*.inl;*.xsd" />
+    <ClInclude Include="..\inc\scanuk.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
 </Project>
